--- a/tests/SprykerTest/Zed/ProductRelationStorage/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductRelationStorage/codeception.yml
@@ -27,3 +27,4 @@ suites:
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Zed\ProductAttribute\Helper\ProductAttributeDataHelper
                 - \SprykerTest\Shared\ProductRelation\Helper\ProductRelationDataHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDataHelper
