--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "spryker/product-attribute": "*",
     "spryker/propel": "*",
     "spryker/propel-orm": "*",
+    "spryker/store": "*",
     "spryker/testify": "*"
   },
   "suggest": {
