CC-7411 implement and fix tests

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "spryker/product-attribute": "*",
     "spryker/propel": "*",
     "spryker/propel-orm": "*",
+    "spryker/queue": "*",
     "spryker/store": "*",
     "spryker/testify": "*"
   },
