--- a/tests/SprykerTest/Zed/ProductRelationStorage/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductRelationStorage/codeception.yml
@@ -4,7 +4,7 @@ paths:
     tests: .
     data: ../../../_data
     support: _support
-    log: ../../../_output
+    output: ../../../_output
 
 coverage:
     enabled: true
@@ -14,7 +14,7 @@ coverage:
 suites:
     Communication:
         path: Communication
-        class_name: ProductRelationStorageCommunicationTester
+        actor: ProductRelationStorageCommunicationTester
         modules:
             enabled:
                 - Asserts
@@ -30,7 +30,7 @@ suites:
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
     Business:
         path: Business
-        class_name: ProductRelationStorageBusinessTester
+        actor: ProductRelationStorageBusinessTester
         modules:
             enabled:
                 - Asserts
