FRW-1817 Fixed false positive test cases with Dynamic Multistore mode enabled. (#10862)
FRW-6382 Adjust StoreDependencyHelper and related tests to cover cases when there is no store provided

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "spryker/propel": "*",
         "spryker/propel-orm": "*",
         "spryker/queue": "*",
+        "spryker/rabbit-mq": "*",
         "spryker/store": "*",
         "spryker/testify": "*"
     },
