--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,6 @@
 parameters:
     level: 7
-    checkMissingIterableValueType: false
     ignoreErrors:
         - '#Call to an undefined method .+SpyProductAbstractQuery\|.+SpyProductRelationProductAbstractQuery\|.+SpyProductRelationStoreQuery\|.+SpyProductRelationTypeQuery::joinWithSpyProductAbstract\(\).#'
+        -
+            identifier: missingType.iterableValue
